--- a/css/iletisim.css
+++ b/css/iletisim.css
@@ -1,3 +1,17 @@
-style {
-    
+body {
+    background-color: aquamarine;
 }
+
+h1 {
+    color: blueviolet;
+}
+
+a {
+    color: blue;
+    font-size: medium;
+}
+
+ul {
+    list-style: inside ;
+}
+
